Fix dropdown menu spacing

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -28,6 +28,9 @@ It was originally created by Caroline Hadilaksono: http://www.hadilaksono.com
 body{
   padding-top: 80px;
 }
+.navbar-nav .dropdown-menu {
+    padding: 10px 15px;
+}
 
 h1,h2,h3,h4 {
   font-family:"Junction Light", lucida grande,lucida sans console,sans-serif;
